fix(layout): Ajusta espaçamento no rodapé da sidebar para evitar overflow

--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -169,7 +169,7 @@
         align-items: center;
         width: 100%;
         padding: 0.6rem;
-        gap: 5rem;
+        gap: 2rem;
     }
 }
 
